# recall-squirrel

./: .gitignore  README.md  inital_setup.py  pyproject.toml
src/recall_squirrel/: __init__.py  config.py  configs.py  db.py  db_operations.py  models.py  session_management.py
src/recall_squirrel/db/: db_connection.py  db_operations.py  models.py
src/recall_squirrel/ui/: cli.py  console.py
tests/: run_test.py  test_models.py
