[project]
name = "recall-squirrel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Annie Giokas", email = "angiokas@pm.me" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "click>=8.1.8",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "platformdirs>=4.3.7",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
]

[project.scripts]
recall-squirrel = "recall_squirrel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
